// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Dialog when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-18"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-20 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthSm-12 makeStyles-smallDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-47 MuiPaper-rounded-21"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-71 makeStyles-title-48"
        >
          <h6
            class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-111 MuiIconButton-root-102 makeStyles-closeButton-55"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-110"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-114"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-268"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-123 makeStyles-content-50"
        >
          <div
            class="MuiGrid-root-125 makeStyles-contentGrid-67 MuiGrid-container-126 MuiGrid-spacing-xs-8-155"
          >
            <div
              class="MuiGrid-root-125 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-4-177"
            >
              <div
                class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
              >
                <div
                  class="makeStyles-noRewardsAmount-66"
                >
                  <img
                    alt="rewards icon"
                    class="makeStyles-rewardsIcon-65"
                    src="/assets/icons/rewards-gift.svg"
                  />
                  <div
                    class="MuiBox-root-230 MuiBox-root-231"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
                    >
                      $0.00
                    </h6>
                  </div>
                </div>
                <p
                  class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                >
                  No rewards available.
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-125 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-8-181"
            >
              <div
                class="MuiGrid-root-125 makeStyles-moreRewardsSection-57"
              >
                <div
                  class="MuiGrid-root-125 makeStyles-moreRewardsInformation-58 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
                >
                  <div
                    class="MuiGrid-root-125 MuiGrid-item-127"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-moreRewardsDescription-59 MuiGrid-item-127"
                  >
                    <p
                      class="MuiTypography-root-72 MuiTypography-body2-73"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-rewardsGuideLinkContainer-61 MuiGrid-item-127"
                  >
                    <a
                      class="MuiTypography-root-72 MuiLink-root-233 MuiLink-underlineHover-235 makeStyles-rewardsGuide-62 MuiTypography-colorPrimary-95"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-boostRewards-60 MuiGrid-item-127"
                  >
                    <button
                      class="MuiButtonBase-root-111 MuiButton-root-239 MuiButton-contained-247 MuiButton-containedPrimary-248 MuiButton-fullWidth-262"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-240"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-268"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are no rewards displays zero amount in rewards button 1`] = `
<div
  aria-hidden="true"
/>
`;

exports[`Rewards Dialog when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-18"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Rewards User Guide"
        aria-labelledby="user-guide"
        class="MuiPaper-root-20 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthSm-12 makeStyles-smallDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-47 MuiPaper-rounded-21"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-71 makeStyles-title-315"
        >
          <div
            class="MuiBox-root-246 MuiBox-root-325"
          >
            <button
              aria-label="exit guide mode"
              class="MuiButtonBase-root-111 MuiIconButton-root-102 makeStyles-arrowBack-317"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-110"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-114 MuiSvgIcon-fontSizeInherit-120"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-326"
              />
            </button>
            <h6
              class="MuiTypography-root-72 makeStyles-boldWeight-321 MuiTypography-h6-82"
            >
              Rewards User Guide
            </h6>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-123 makeStyles-content-316"
        >
          <div
            class="MuiGrid-root-125 MuiGrid-container-126"
          >
            <div
              class="MuiGrid-root-125 MuiGrid-item-127"
            >
              <ul
                class="makeStyles-rewardsOptions-320"
              >
                <li>
                  <p
                    class="MuiTypography-root-72 MuiTypography-body2-73"
                  >
                    Staking 50% non native tokens
                  </p>
                </li>
                <li>
                  <p
                    class="MuiTypography-root-72 MuiTypography-body2-73"
                  >
                    Holding and/or Staking 50% BadgerDAO tokens
                  </p>
                </li>
              </ul>
            </div>
            <div
              class="MuiGrid-root-125 makeStyles-tokensSection-323 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-129 MuiGrid-grid-xs-12-171"
            >
              <div
                class="MuiGrid-root-125 MuiGrid-item-127"
              >
                <h6
                  class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                >
                  Badger has 3 types of tokens:
                </h6>
              </div>
              <div
                class="MuiGrid-root-125 makeStyles-userGuideTokens-318 MuiGrid-container-126 MuiGrid-spacing-xs-4-151"
              >
                <div
                  class="MuiGrid-root-125 MuiGrid-item-127"
                >
                  <div
                    class="MuiGrid-root-125 makeStyles-userGuideToken-319 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <p
                        class="MuiTypography-root-72 makeStyles-tokenName-322 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                      >
                        BADGERDAO TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <h6
                        class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                      >
                        Badger, Digg
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-reverse-130 MuiGrid-grid-xs-true-159"
                    >
                      <button
                        aria-label="view badger dao tokens"
                        class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-text-272 makeStyles-viewVaultsButton-324 MuiButton-textPrimary-273 MuiButton-textSizeSmall-285 MuiButton-sizeSmall-291"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-271"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-114 MuiSvgIcon-colorPrimary-115"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-326"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-125 MuiGrid-item-127"
                >
                  <div
                    class="MuiGrid-root-125 makeStyles-userGuideToken-319 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-129"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <p
                        class="MuiTypography-root-72 makeStyles-tokenName-322 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                      >
                        BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <h6
                        class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                      />
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-reverse-130 MuiGrid-grid-xs-true-159"
                    >
                      <button
                        aria-label="view boosted tokens"
                        class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-text-272 makeStyles-viewVaultsButton-324 MuiButton-textPrimary-273 MuiButton-textSizeSmall-285 MuiButton-sizeSmall-291"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-271"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-114 MuiSvgIcon-colorPrimary-115"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-326"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-125 MuiGrid-item-127"
                >
                  <div
                    class="MuiGrid-root-125 makeStyles-userGuideToken-319 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-129"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <p
                        class="MuiTypography-root-72 makeStyles-tokenName-322 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                      >
                        NON-BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-item-127"
                    >
                      <h6
                        class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                      >
                        All other tokens (e.g. 
                        Test Token, Test Token
                        ...)
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-direction-xs-column-reverse-130 MuiGrid-grid-xs-true-159"
                    >
                      <button
                        aria-label="view non-boosted tokens"
                        class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-text-272 makeStyles-viewVaultsButton-324 MuiButton-textPrimary-273 MuiButton-textSizeSmall-285 MuiButton-sizeSmall-291"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-271"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-114 MuiSvgIcon-colorPrimary-115"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-72 MuiTypography-subtitle2-84"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-326"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-18"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-20 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthSm-12 makeStyles-bigDialog-1 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-47 MuiPaper-rounded-21"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-71 makeStyles-title-336"
        >
          <h6
            class="MuiTypography-root-72 makeStyles-titleText-337 MuiTypography-h6-82"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-111 MuiIconButton-root-102 makeStyles-closeButton-343"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-110"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-114"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-406"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-123 makeStyles-content-338"
        >
          <div
            class="MuiGrid-root-125 makeStyles-contentGrid-355 MuiGrid-container-126 MuiGrid-spacing-xs-8-155"
          >
            <div
              class="MuiGrid-root-125 makeStyles-checkboxesSpacing-356 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-6-179"
            >
              <div
                class="MuiGrid-root-125 makeStyles-contentPadding-357 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
              >
                <div
                  class="MuiGrid-root-125 makeStyles-optionsContainer-358 MuiGrid-container-126 MuiGrid-item-127"
                >
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-344 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-361"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-373 MuiCheckbox-root-367 MuiCheckbox-colorPrimary-371 PrivateSwitchBase-checked-374 MuiCheckbox-checked-368 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-376"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-406"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-366 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-377"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-360 MuiTypography-h6-82"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-359"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-380"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-344 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-361"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-373 MuiCheckbox-root-367 MuiCheckbox-colorPrimary-371 PrivateSwitchBase-checked-374 MuiCheckbox-checked-368 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-376"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-406"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-366 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-382"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-360 MuiTypography-h6-82"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-359"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-385"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-344 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-361"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-373 MuiCheckbox-root-367 MuiCheckbox-colorPrimary-371 PrivateSwitchBase-checked-374 MuiCheckbox-checked-368 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-376"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-406"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-366 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-386"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-360 MuiTypography-h6-82"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-359"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-389"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-390 makeStyles-divider-352"
                />
                <div
                  class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-align-items-xs-center-134 MuiGrid-justify-content-xs-space-between-145"
                >
                  <p
                    class="MuiTypography-root-72 MuiTypography-body2-73"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-246 MuiBox-root-399"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-337 MuiTypography-h6-82"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-125 makeStyles-submitButton-351 MuiGrid-item-127"
                >
                  <button
                    class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-contained-278 MuiButton-containedPrimary-279 MuiButton-fullWidth-293"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-271"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-406"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-125 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-6-179"
            >
              <div
                class="MuiGrid-root-125 makeStyles-moreRewardsSection-345"
              >
                <div
                  class="MuiGrid-root-125 makeStyles-moreRewardsInformation-346 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
                >
                  <div
                    class="MuiGrid-root-125 MuiGrid-item-127"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-337 MuiTypography-h6-82"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-moreRewardsDescription-347 MuiGrid-item-127"
                  >
                    <p
                      class="MuiTypography-root-72 MuiTypography-body2-73"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-rewardsGuideLinkContainer-349 MuiGrid-item-127"
                  >
                    <a
                      class="MuiTypography-root-72 MuiLink-root-400 MuiLink-underlineHover-402 makeStyles-rewardsGuide-350 MuiTypography-colorPrimary-95"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-boostRewards-348 MuiGrid-item-127"
                  >
                    <button
                      class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-contained-278 MuiButton-containedPrimary-279 MuiButton-fullWidth-293"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-271"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-406"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-18"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-20 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthSm-12 makeStyles-bigDialog-1 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-47 MuiPaper-rounded-21"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-71 makeStyles-title-48"
        >
          <h6
            class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-111 MuiIconButton-root-102 makeStyles-closeButton-55"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-110"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-114"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-305"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-123 makeStyles-content-50"
        >
          <div
            class="MuiGrid-root-125 makeStyles-contentGrid-67 MuiGrid-container-126 MuiGrid-spacing-xs-8-155"
          >
            <div
              class="MuiGrid-root-125 makeStyles-checkboxesSpacing-68 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-6-179"
            >
              <div
                class="MuiGrid-root-125 makeStyles-contentPadding-69 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
              >
                <div
                  class="MuiGrid-root-125 makeStyles-optionsContainer-70 MuiGrid-container-126 MuiGrid-item-127"
                >
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-56 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-230"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240 PrivateSwitchBase-checked-243 MuiCheckbox-checked-237 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-245"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-305"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-235 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-247"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-229 MuiTypography-h6-82"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-228"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-250"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-56 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-230"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240 PrivateSwitchBase-checked-243 MuiCheckbox-checked-237 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-245"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-305"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-235 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-252"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-229 MuiTypography-h6-82"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-228"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-255"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-claimRow-56 MuiGrid-item-127"
                  >
                    <div
                      class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-justify-content-xs-space-between-145"
                    >
                      <label
                        class="MuiFormControlLabel-root-230"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-111 MuiIconButton-root-102 PrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240 PrivateSwitchBase-checked-243 MuiCheckbox-checked-237 MuiIconButton-colorPrimary-106"
                        >
                          <span
                            class="MuiIconButton-label-110"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-245"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-114"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-305"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-72 MuiFormControlLabel-label-235 MuiTypography-body1-74"
                        >
                          <p
                            class="MuiTypography-root-72 MuiTypography-body2-73"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-246 MuiBox-root-256"
                      >
                        <h6
                          class="MuiTypography-root-72 makeStyles-boldWeight-229 MuiTypography-h6-82"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-228"
                        >
                          <div
                            class="MuiBox-root-246 MuiBox-root-259"
                          >
                            <p
                              class="MuiTypography-root-72 MuiTypography-body2-73 MuiTypography-colorTextSecondary-98"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-260 makeStyles-divider-64"
                />
                <div
                  class="MuiGrid-root-125 MuiGrid-container-126 MuiGrid-item-127 MuiGrid-align-items-xs-center-134 MuiGrid-justify-content-xs-space-between-145"
                >
                  <p
                    class="MuiTypography-root-72 MuiTypography-body2-73"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-246 MuiBox-root-269"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-125 makeStyles-submitButton-63 MuiGrid-item-127"
                >
                  <button
                    class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-contained-278 MuiButton-containedPrimary-279 MuiButton-fullWidth-293"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-271"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-305"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-125 MuiGrid-item-127 MuiGrid-grid-xs-12-171 MuiGrid-grid-sm-6-179"
            >
              <div
                class="MuiGrid-root-125 makeStyles-moreRewardsSection-57"
              >
                <div
                  class="MuiGrid-root-125 makeStyles-moreRewardsInformation-58 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
                >
                  <div
                    class="MuiGrid-root-125 MuiGrid-item-127"
                  >
                    <h6
                      class="MuiTypography-root-72 makeStyles-titleText-49 MuiTypography-h6-82"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-moreRewardsDescription-59 MuiGrid-item-127"
                  >
                    <p
                      class="MuiTypography-root-72 MuiTypography-body2-73"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-rewardsGuideLinkContainer-61 MuiGrid-item-127"
                  >
                    <a
                      class="MuiTypography-root-72 MuiLink-root-299 MuiLink-underlineHover-301 makeStyles-rewardsGuide-62 MuiTypography-colorPrimary-95"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-125 makeStyles-boostRewards-60 MuiGrid-item-127"
                  >
                    <button
                      class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-contained-278 MuiButton-containedPrimary-279 MuiButton-fullWidth-293"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-271"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-305"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards displays rewards amount in rewards button 1`] = `
<div
  aria-hidden="true"
/>
`;

exports[`Rewards Dialog when there are rewards displays success dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-18"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claimed Rewards Overview"
        aria-labelledby="claimed-rewards"
        class="MuiPaper-root-20 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthSm-12 makeStyles-smallDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-47 MuiPaper-rounded-21"
        role="dialog"
      >
        <div
          class="MuiDialogContent-root-123 makeStyles-content-316"
        >
          <div
            class="MuiGrid-root-125 makeStyles-centeredText-322 MuiGrid-container-126 MuiGrid-direction-xs-column-129"
          >
            <button
              class="MuiButtonBase-root-111 MuiIconButton-root-102 makeStyles-closeButton-324"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-110"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-114"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-325"
              />
            </button>
            <div
              class="MuiGrid-root-125 makeStyles-successIconContainer-319 MuiGrid-item-127"
            >
              <img
                alt="rewards success icon"
                src="/assets/icons/rewards-claim-success.svg"
              />
            </div>
            <h4
              class="MuiTypography-root-72 makeStyles-rewardsTitle-320 MuiTypography-h4-80"
            >
              Rewards Claimed
            </h4>
            <h6
              class="MuiTypography-root-72 MuiTypography-subtitle2-84"
            >
              Rewards claimed for tokens:
            </h6>
            <h6
              class="MuiTypography-root-72 MuiTypography-subtitle2-84"
            >
              BADGER
            </h6>
            <h6
              class="MuiTypography-root-72 MuiTypography-subtitle2-84"
            >
              bveCVX
            </h6>
            <h6
              class="MuiTypography-root-72 MuiTypography-subtitle2-84"
            >
              bCVXCRV
            </h6>
            <button
              class="MuiButtonBase-root-111 MuiButton-root-270 MuiButton-contained-278 makeStyles-goBackButton-323 MuiButton-containedPrimary-279"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-271"
              >
                Go Back To My Rewards
              </span>
              <span
                class="MuiTouchRipple-root-325"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
